Added an image,title and text for custom notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Custom_Notifications</string>
     <string name="progress_notification">Progress_Notification</string>
+    <string name="custom_notification">CUSTOM_Notification</string>
 </resources>
